# SeeVar-Next

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
config/: seevar-next.example.json
deploy/systemd/: seevar-next-dashboard.service  seevar-next-flight-monitor.service  seevar-next-nightly.service  seevar-next-nightly.timer  seevar-next-preflight.service  seevar-next-preflight.timer
docs/: ARCHITECTURE.md  FLIGHT.md  LOGIC_SALVAGE.md  MANUAL.md  POSTFLIGHT.md  PREFLIGHT.md  SALVAGE.md  SEEVAR_SKILL.md  SYSTEMD.md
src/seevar_next/: __init__.py  config.py  dashboard.py  models.py  operator.py  readiness.py  weather.py
src/seevar_next/flight/: __init__.py  dryrun.py  policy.py  runner.py  seestar_rpc.py  seestarpy_adapter.py  status.py  steps.py
src/seevar_next/monitor/: __init__.py  status.py
src/seevar_next/postflight/: __init__.py  pipeline.py
src/seevar_next/preflight/: __init__.py  aavso.py  catalogs.py  planner.py  seestarpy_plan.py  vsx.py
src/seevar_next/proof/: __init__.py  ledger.py
tests/: test_contracts.py  test_dashboard.py  test_flight_policy.py  test_flight_runner.py  test_flight_status.py  test_flight_steps.py  test_operator.py  test_postflight_pipeline.py  test_preflight_pipeline.py  test_proof_ledger.py  test_readiness.py  test_seestar_rpc.py  test_seestarpy_adapter.py
