[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seevar-next"
version = "0.1.0"
description = "Proof-driven AAVSO workflow for Seestar telescopes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astropy>=7.0",
  "httpx>=0.28",
  "photutils>=2.3",
  "numpy>=2.0",
  "pillow>=11.0",
  "pydantic>=2.0",
]

[project.scripts]
seevar-next = "seevar_next.operator:main"
seevar-next-fetch-aavso = "seevar_next.preflight.aavso:main"
seevar-next-fetch-vsx = "seevar_next.preflight.vsx:main"
seevar-next-preflight = "seevar_next.preflight.planner:main"
seevar-next-seestarpy-plan = "seevar_next.preflight.seestarpy_plan:main"
seevar-next-dryrun = "seevar_next.flight.dryrun:main"
seevar-next-flight = "seevar_next.flight.runner:main"
seevar-next-status = "seevar_next.monitor.status:main"
seevar-next-postflight = "seevar_next.postflight.pipeline:main"

[project.optional-dependencies]
seestar = [
  "seestarpy",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
